Added Additional Assessment Method under Day2 Class

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Windows\Temp\testng-eclipse--1885770016\testng-customsuite.xml</span>
+                    <span>C:\Windows\Temp\testng-eclipse-1111896356\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="PracticeTests.Day2_Locators_Mastery" class="method navigator-link" hash-for-method="TC_Assessment">TC_Assessment</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="PracticeTests.Day2_Locators_Mastery" class="method navigator-link" hash-for-method="TC_Assessment_02">TC_Assessment_02</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,9 +126,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TC_Assessment">
-                  </a> <!-- TC_Assessment -->
-                  <span class="method-name">TC_Assessment</span>
+                  <a name="TC_Assessment_02">
+                  </a> <!-- TC_Assessment_02 -->
+                  <span class="method-name">TC_Assessment_02</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Windows\Temp\testng-eclipse--1885770016\testng-customsuite.xml</span>
+            <span class="header-content">C:\Windows\Temp\testng-eclipse-1111896356\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -147,7 +147,7 @@
     &lt;classes&gt;
       &lt;class name=&quot;PracticeTests.Day2_Locators_Mastery&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;TC_Assessment&quot;/&gt;
+          &lt;include name=&quot;TC_Assessment_02&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- PracticeTests.Day2_Locators_Mastery --&gt;
     &lt;/classes&gt;
@@ -191,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TC_Assessment')
+data.setCell(0, 1, 'TC_Assessment_02')
 data.setCell(0, 2, 'PracticeTests.Day2_Locators_Mastery')
-data.setCell(0, 3, 1113);
+data.setCell(0, 3, 6780);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 seconds</span>
+              <span class="suite-total-time">Total running time: 6 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -213,21 +213,23 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">5 ignored methods</span>
+            <span class="header-content">6 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
               <span class="ignored-class-name">PracticeTests.Day2_Locators_Mastery</span>
               <div class="ignored-methods-div">
+                <span class="ignored-method-name">TC_Assessment_01</span>
+                <br/>
+                <span class="ignored-method-name">TC02_Practice_CSS_Selectors</span>
+                <br/>
+                <span class="ignored-method-name">TC05_Dynamic_Elements</span>
+                <br/>
                 <span class="ignored-method-name">TC03_Practice_Xpaths</span>
                 <br/>
                 <span class="ignored-method-name">TC04_Waits</span>
                 <br/>
                 <span class="ignored-method-name">TC01_Practice_With_All_Locators</span>
-                <br/>
-                <span class="ignored-method-name">TC02_Practice_CSS_Selectors</span>
-                <br/>
-                <span class="ignored-method-name">TC05_Dynamic_Elements</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -245,8 +247,8 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">TC_Assessment</span>
-                <span class="method-start">1591 ms</span>
+                <span class="method-name">TC_Assessment_02</span>
+                <span class="method-start">1733 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
