Added Day 5 and Logging Process

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Windows\Temp\testng-eclipse--928691000\testng-customsuite.xml</span>
+                    <span>C:\Windows\Temp\testng-eclipse--1778102231\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="PracticeTests.Day4_AdvancedXpath_And_DynamicElements" class="method navigator-link" hash-for-method="TC01_Xpath_Strategies">TC01_Xpath_Strategies</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="PracticeTests.Day5_Miscellaneous_Questions" class="method navigator-link" hash-for-method="TC_06_Getting_All_The_Broken_Images">TC_06_Getting_All_The_Broken_Images</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">PracticeTests.Day4_AdvancedXpath_And_DynamicElements</span>
+              <span class="class-name">PracticeTests.Day5_Miscellaneous_Questions</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TC01_Xpath_Strategies">
-                  </a> <!-- TC01_Xpath_Strategies -->
-                  <span class="method-name">TC01_Xpath_Strategies</span>
+                  <a name="TC_06_Getting_All_The_Broken_Images">
+                  </a> <!-- TC_06_Getting_All_The_Broken_Images -->
+                  <span class="method-name">TC_06_Getting_All_The_Broken_Images</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Windows\Temp\testng-eclipse--928691000\testng-customsuite.xml</span>
+            <span class="header-content">C:\Windows\Temp\testng-eclipse--1778102231\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;PracticeTests.Day4_AdvancedXpath_And_DynamicElements&quot;&gt;
+      &lt;class name=&quot;PracticeTests.Day5_Miscellaneous_Questions&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;TC01_Xpath_Strategies&quot;/&gt;
+          &lt;include name=&quot;TC_06_Getting_All_The_Broken_Images&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- PracticeTests.Day4_AdvancedXpath_And_DynamicElements --&gt;
+      &lt;/class&gt; &lt;!-- PracticeTests.Day5_Miscellaneous_Questions --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -191,9 +191,9 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TC01_Xpath_Strategies')
-data.setCell(0, 2, 'PracticeTests.Day4_AdvancedXpath_And_DynamicElements')
-data.setCell(0, 3, 3554);
+data.setCell(0, 1, 'TC_06_Getting_All_The_Broken_Images')
+data.setCell(0, 2, 'PracticeTests.Day5_Miscellaneous_Questions')
+data.setCell(0, 3, 3262);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -213,9 +213,24 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">5 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">PracticeTests.Day5_Miscellaneous_Questions</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">TC01_Uploading_A_File</span>
+                <br/>
+                <span class="ignored-method-name">TC_05_Handling_Cookies</span>
+                <br/>
+                <span class="ignored-method-name">TC_04_Handling_Screenshots</span>
+                <br/>
+                <span class="ignored-method-name">TC02_Handling_JavascriptExecuter</span>
+                <br/>
+                <span class="ignored-method-name">TC03_Handling_Action_Class</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -224,14 +239,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">PracticeTests.Day4_AdvancedXpath_And_DynamicElements</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">PracticeTests.Day5_Miscellaneous_Questions</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">TC01_Xpath_Strategies</span>
-                <span class="method-start">1627 ms</span>
+                <span class="method-name">TC_06_Getting_All_The_Broken_Images</span>
+                <span class="method-start">2179 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
