Added more tests in Day 5

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Windows\Temp\testng-eclipse--1778102231\testng-customsuite.xml</span>
+                    <span>C:\Windows\Temp\testng-eclipse-1428932652\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="PracticeTests.Day5_Miscellaneous_Questions" class="method navigator-link" hash-for-method="TC_06_Getting_All_The_Broken_Images">TC_06_Getting_All_The_Broken_Images</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="PracticeTests.Day5_Miscellaneous_Questions" class="method navigator-link" hash-for-method="TC_09_Dropdown__Without_Select_Class">TC_09_Dropdown__Without_Select_Class</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,9 +126,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TC_06_Getting_All_The_Broken_Images">
-                  </a> <!-- TC_06_Getting_All_The_Broken_Images -->
-                  <span class="method-name">TC_06_Getting_All_The_Broken_Images</span>
+                  <a name="TC_09_Dropdown__Without_Select_Class">
+                  </a> <!-- TC_09_Dropdown__Without_Select_Class -->
+                  <span class="method-name">TC_09_Dropdown__Without_Select_Class</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Windows\Temp\testng-eclipse--1778102231\testng-customsuite.xml</span>
+            <span class="header-content">C:\Windows\Temp\testng-eclipse-1428932652\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -147,7 +147,7 @@
     &lt;classes&gt;
       &lt;class name=&quot;PracticeTests.Day5_Miscellaneous_Questions&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;TC_06_Getting_All_The_Broken_Images&quot;/&gt;
+          &lt;include name=&quot;TC_09_Dropdown__Without_Select_Class&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- PracticeTests.Day5_Miscellaneous_Questions --&gt;
     &lt;/classes&gt;
@@ -191,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TC_06_Getting_All_The_Broken_Images')
+data.setCell(0, 1, 'TC_09_Dropdown__Without_Select_Class')
 data.setCell(0, 2, 'PracticeTests.Day5_Miscellaneous_Questions')
-data.setCell(0, 3, 3262);
+data.setCell(0, 3, 7182);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 seconds</span>
+              <span class="suite-total-time">Total running time: 7 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -213,7 +213,7 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">5 ignored methods</span>
+            <span class="header-content">8 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
@@ -221,7 +221,13 @@ return data;
               <div class="ignored-methods-div">
                 <span class="ignored-method-name">TC01_Uploading_A_File</span>
                 <br/>
+                <span class="ignored-method-name">TC_08_DeleteAllCookies</span>
+                <br/>
                 <span class="ignored-method-name">TC_05_Handling_Cookies</span>
+                <br/>
+                <span class="ignored-method-name">TC_06_Finding_All_The_Broken_Images</span>
+                <br/>
+                <span class="ignored-method-name">TC_07_Finding_All_The_Broken_Links</span>
                 <br/>
                 <span class="ignored-method-name">TC_04_Handling_Screenshots</span>
                 <br/>
@@ -245,8 +251,8 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">TC_06_Getting_All_The_Broken_Images</span>
-                <span class="method-start">2179 ms</span>
+                <span class="method-name">TC_09_Dropdown__Without_Select_Class</span>
+                <span class="method-start">2116 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
