--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Windows\Temp\testng-eclipse-1428932652\testng-customsuite.xml</span>
+                    <span>C:\Windows\Temp\testng-eclipse--106650632\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="PracticeTests.Day5_Miscellaneous_Questions" class="method navigator-link" hash-for-method="TC_09_Dropdown__Without_Select_Class">TC_09_Dropdown__Without_Select_Class</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="MockInterviewTests.Day1_Interview" class="method navigator-link" hash-for-method="TC_06_GetAllTheLinks">TC_06_GetAllTheLinks</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">PracticeTests.Day5_Miscellaneous_Questions</span>
+              <span class="class-name">MockInterviewTests.Day1_Interview</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TC_09_Dropdown__Without_Select_Class">
-                  </a> <!-- TC_09_Dropdown__Without_Select_Class -->
-                  <span class="method-name">TC_09_Dropdown__Without_Select_Class</span>
+                  <a name="TC_06_GetAllTheLinks">
+                  </a> <!-- TC_06_GetAllTheLinks -->
+                  <span class="method-name">TC_06_GetAllTheLinks</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Windows\Temp\testng-eclipse-1428932652\testng-customsuite.xml</span>
+            <span class="header-content">C:\Windows\Temp\testng-eclipse--106650632\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;PracticeTests.Day5_Miscellaneous_Questions&quot;&gt;
+      &lt;class name=&quot;MockInterviewTests.Day1_Interview&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;TC_09_Dropdown__Without_Select_Class&quot;/&gt;
+          &lt;include name=&quot;TC_06_GetAllTheLinks&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- PracticeTests.Day5_Miscellaneous_Questions --&gt;
+      &lt;/class&gt; &lt;!-- MockInterviewTests.Day1_Interview --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -191,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TC_09_Dropdown__Without_Select_Class')
-data.setCell(0, 2, 'PracticeTests.Day5_Miscellaneous_Questions')
-data.setCell(0, 3, 7182);
+data.setCell(0, 1, 'TC_06_GetAllTheLinks')
+data.setCell(0, 2, 'MockInterviewTests.Day1_Interview')
+data.setCell(0, 3, 16519);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 16 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -213,27 +213,21 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">8 ignored methods</span>
+            <span class="header-content">5 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">PracticeTests.Day5_Miscellaneous_Questions</span>
+              <span class="ignored-class-name">MockInterviewTests.Day1_Interview</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">TC01_Uploading_A_File</span>
+                <span class="ignored-method-name">TC_04_IframeOrNot</span>
                 <br/>
-                <span class="ignored-method-name">TC_08_DeleteAllCookies</span>
+                <span class="ignored-method-name">TC_01_Handling_Windows</span>
                 <br/>
-                <span class="ignored-method-name">TC_05_Handling_Cookies</span>
+                <span class="ignored-method-name">TC_03_SwitchingIframes</span>
                 <br/>
-                <span class="ignored-method-name">TC_06_Finding_All_The_Broken_Images</span>
+                <span class="ignored-method-name">TC_02_DynamicWebelements</span>
                 <br/>
-                <span class="ignored-method-name">TC_07_Finding_All_The_Broken_Links</span>
-                <br/>
-                <span class="ignored-method-name">TC_04_Handling_Screenshots</span>
-                <br/>
-                <span class="ignored-method-name">TC02_Handling_JavascriptExecuter</span>
-                <br/>
-                <span class="ignored-method-name">TC03_Handling_Action_Class</span>
+                <span class="ignored-method-name">TC_05_Actions</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -245,15 +239,19 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">PracticeTests.Day5_Miscellaneous_Questions</div> <!-- chronological-class-name -->
-              <div class="configuration-test before">
+              <div class="chronological-class-name">MockInterviewTests.Day1_Interview</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-test before -->
+              </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">TC_09_Dropdown__Without_Select_Class</span>
-                <span class="method-start">2116 ms</span>
+                <span class="method-name">TC_06_GetAllTheLinks</span>
+                <span class="method-start">1649 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">18178 ms</span>
+              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
